# TODObot

./: .gitignore  README.md  pyproject.toml  script.py
conf/: config_bot.py
handlers/: appshed.py  chose_task.py  start.py
handlers/logic_catalog/: logick.py
handlers/random_catalog/: random.py  random_all.py  random_hobby.py  random_home.py  random_sport.py
handlers/show_catalog/: delit_task.py
keyboard/: for_yes_no.py
scripts/: script.py
scripts/conf/: commands.py  config_bot.py  settings.py
scripts/handlers/: appshed.py  chose_task.py  my_menu.py  start.py
scripts/handlers/admin/: for_admin.py
scripts/handlers/gpt_catalog/: gpt.py
scripts/handlers/horoscope_catalog/: horoscope.py
scripts/handlers/logic_catalog/: logick.py
scripts/handlers/random_catalog/: random_all.py  random_hobby.py  random_home.py  random_sport.py
scripts/handlers/show_catalog/: delit_task.py  show_task.py  y_n.py
scripts/keyboard/: for_add.py  for_random.py  for_show.py
scripts/middlewares/: appshed.py  filters.py
scripts/sql/: bd_rand.py  bd_shedule.py  bd_show.py  bd_task.py  bd_user.py
sql/: bd_delit.py  bd_rand.py  bd_shedule.py  bd_show.py  bd_task.py  bd_user.py
test/: test_table.py
